# beancount-sog

./: README.md  pyproject.toml
beancount_sog/: __init__.py
tests/: test_beancount_sog.py
